2004-01-24  Carl Worth  <cworth@isi.edu>

	* src/cairo_path_stroke.c (_cairo_stroker_add_sub_edge): Fix to
	use tessellate_polygon instead of tessellate_rectangle as the
	matrix may have skewed the coordinates into a non-rectangular
	shape.

	* src/cairo_xlib_surface.c (_cairo_xlib_surface_set_filter): Add
	missing break statements to switch.

2004-01-22  Richard D. Worth  <richard@theworths.org>

	* src/Makefile.am: Add '-no-undefined' to end of
	libcairo_la_LDFLAGS to enable building shared library under
	cygwin.

	* src/cairo.h: Remove all 'extern ' and ' __external_linkage'
	(macro for __declspec(dllexport) and __declspec(dllimport))
	from function declarations. These are no longer needed for cygwin.

	* src/cairo_traps.c: Changed type of _line_segs_intersect_ceil
	from 'static cairo_fixed_t' to 'static int' to match definition.
	This was necessary to compile under cygwin.
	
2003-12-17  Carl Worth  <cworth@east.isi.edu>

	* src/cairo.h: Remove trailing commas from enums, (some compilers
	like to complain about them).

2003-12-16  Dave Beckett  <Dave.Beckett@bristol.ac.uk>

	* README: Do not require libpixregion, libic.

2003-12-16  Carl Worth  <cworth@east.isi.edu>

	* NEWS: Add more notes culled from the ChangeLog.

2003-12-16  Carl Worth  <cworth@isi.edu>

	* NEWS: Begin maintaining NEWS file. Add notes on 0.1.17.

	* configure.in: Bump version to 0.1.17 for new functions:
	cairo_text_extents, cairo_glyph_extents, cairo_text_path,
	cairo_glyph_path.

	* src/cairo.h: 
	* src/cairo.c (cairo_text_path): 
	(cairo_glyph_path): Re-enable cairo_text_path and cairo_glyph_path.

	* src/cairo_gstate.c (_cairo_gstate_glyph_path): Add missing
	transformation.

	* src/cairo_ft_font.c (_move_to):
	(_line_to):
	(_conic_to):
	(_cubic_to):
	(_cairo_ft_font_glyph_path): Initial implementation of glyph_path.

2003-12-16  Carl Worth  <cworth@isi.edu>

	* src/cairoint.h: Move all current_point state fields from
	cairo_gstate_t to cairo_path_t.
