@@ -1,3 +1,14 @@
+2004-01-27  Graydon Hoare  <graydon@redhat.com>
+
+	* src/cairoint.h (cairo_surface): New "filter" field.
+	* src/cairo_surface.c 
+	(cairo_surface_get_filter): New function.
+	(cairo_surface_set_filter): Store filter in surface.
+	* src/cairo.h (cairo_surface_get_filter): Declare.
+	* src/cairo_xlib_surface.c
+	(_cairo_xlib_surface_clone_similar): Copy filter setting.
+	(_cairo_xlib_surface_set_filter): Use constants from Xrender.h
+
 2004-01-24  Carl Worth  <cworth@isi.edu>
 
 	* src/cairo_path_stroke.c (_cairo_stroker_add_sub_edge): Fix to
